--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -15,6 +15,15 @@ workflows:
       node: 16.2.0
       xcode: latest
       cocoapods: default
+    triggering:
+      events:
+        - push
+        - tag
+        - pull_request
+      branch_patterns:
+        - pattern: develop
+          include: true
+          source: true
     scripts:
       - name: Install npm dependencies
         script: |
