--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -53,7 +53,7 @@ workflows:
           xcode-project use-profiles --warn-only
       - name: Build ipa for distribution
         script: |
-          xcode-project build-ipa --workspace "$FCI_BUILD_DIR/ios/$XCODE_PROJECT" --scheme "$XCODE_SCHEME"
+          xcode-project build-ipa --scheme "$XCODE_SCHEME"
     artifacts:
       - build/ios/ipa/*.ipa
       - /tmp/xcodebuild_logs/*.log
