--- a/ios/mystoreye.xcodeproj/xcshareddata/xcschemes/mystoreye.xcscheme
+++ b/ios/mystoreye.xcodeproj/xcshareddata/xcschemes/mystoreye.xcscheme
@@ -17,7 +17,7 @@
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
                BuildableName = "alazzani.app"
                BlueprintName = "alazzani"
-               ReferencedContainer = "container:alazzani.xcodeproj">
+               ReferencedContainer = "container:mystoreye.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -35,7 +35,7 @@
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
                BuildableName = "alazzaniTests.xctest"
                BlueprintName = "alazzaniTests"
-               ReferencedContainer = "container:alazzani.xcodeproj">
+               ReferencedContainer = "container:mystoreye.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -57,7 +57,7 @@
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "alazzani.app"
             BlueprintName = "alazzani"
-            ReferencedContainer = "container:alazzani.xcodeproj">
+            ReferencedContainer = "container:mystoreye.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -74,7 +74,7 @@
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "alazzani.app"
             BlueprintName = "alazzani"
-            ReferencedContainer = "container:alazzani.xcodeproj">
+            ReferencedContainer = "container:mystoreye.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
